--- a/style.css
+++ b/style.css
@@ -1,149 +1,61 @@
-.card
-{
-    width: 30%;
-    min-width: 200px;
-    max-width: 300px;
+@import url('https://fonts.googleapis.com/css?family=Economica:700&display=swap');
 
-    padding: 30px 15px 15px;
-
-    box-sizing: border-box;
-
-    font-size: 11px;
-    line-height: 1.18;
-
-    border: 1px solid #F3F3F3;
-    border-radius: 5px;
-
-
-    color: #000;
+* {
+	box-sizing: border-box;
 }
 
-.card__image-container
-{
-    position: relative;
-    margin: 0 5px 45px;
-    padding-top: 83.75%;
+body {
+	font-family: 'Economica', sans-serif;
+	font-size: 2rem;
+	text-transform: uppercase;
+	min-height: 100vh;
+	background-color: black;
+	color: orchid;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.card__image
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
+.wrapper {
+	width: 546px;
+	height: 500px;
+	position: relative;
 }
 
-.card__title
-{
-    font-size: 12px;
-    line-height: 1.25;
-
-    margin: 0 0 6px;
-
-    color: #000;
+.line1 .word,
+.line2 .char {
+	offset-path: path('M.5 159.7C-.9 341.1 228.4 500 273.2 500.5S546.1 350.1 546 159.7c0-75.9-32.9-131.6-97.2-149.8-116.5-33.1-153.6 48.4-175.6 47.8-24.2-.6-66.9-80.5-172.7-50C33.1 27.1 1.1 82 .5 159.7z');
+	offset-position: top;
+	offset-anchor: center left;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
-.card__number
-{
-    margin-bottom: 15px;
+.line1 .word {
+	--i: calc(var(--word-total) - var(--word-index));
+	offset-distance: calc(var(--i) * 4.2rem + 37rem);
+	offset-rotate: auto 90deg;
+	opacity: 0;
+	animation: words 900ms calc(var(--word-index) * 320ms + 2300ms) cubic-bezier(.43,.13,.29,.69) forwards;
 }
 
-.card__status
-{
-    margin-bottom: 20px;
-    overflow: hidden;
+.line2 .char {
+	--i: calc(var(--char-total) - var(--char-index));
+	offset-distance: calc(var(--char-index) * 1% + 64rem);
+	opacity: 0;
+	animation: dots 200ms calc(var(--i) * 30ms) forwards;
 }
 
-.card__rating
-{
-    float: left;
-    width: 50%;
+@keyframes dots {
+	100% {
+		opacity: 1;
+	}
 }
 
-.card__rating-star
-{
-    width: 15px;
-    fill: #E5E5E5;
-}
-
-.card__rating--1 .card__rating-star:nth-child(1),
-.card__rating--2 .card__rating-star:nth-child(-n+2),
-.card__rating--3 .card__rating-star:nth-child(-n+3),
-.card__rating--4 .card__rating-star:nth-child(-n+4),
-.card__rating--5 .card__rating-star
-{
-    fill: #FFDE6A;
-}
-
-.card__review
-{
-    float: right;
-}
-
-.card__price
-{
-    font-size: 11px;
-    text-align: justify;
-    line-height: 19px;
-    margin-bottom: 20px;
-}
-
-.card__price::after
-{
-    /* content: ''; */
-    width: 100%;
-    height: 1px;
-    line-height: 1px;
-    display: inline-block;
-}
-
-.card__price-value
-{
-    font-size: 16px;
-    font-weight: bold;
-    /* text-align: end; */
-    /* display: inline-block; */
-
-    float: right;
-}
-
-.card__button
-{
-    display: inline-block;
-
-    width: 100%;
-    padding: 12px;
-
-    text-align: center;
-
-    box-sizing: border-box;
-
-    background: #00ACDC;
-    border-radius: 5px;
-
-    font-weight: bold;
-    font-size: 14px;
-
-    text-transform: uppercase;
-    cursor: pointer;
-
-    color: #FFFFFF;
-    border: 1px solid #00ACDC;
-
-    transition: all .6s ease-out;
-    will-change: background, color;
-}
-
-.card:hover
-{
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.07);
-}
-
-.card:hover .card__button
-{
-    background: #fff;
-    color: #00ACDC;
+@keyframes words {
+	100% {
+		opacity: 1;
+		offset-distance: calc(var(--i) * 4.2rem + 36rem);
+	}
 }
